@@ -1,7 +1,6 @@
 package log
 
 import (
-	"fmt"
 	"testing"
 	"time"
 
@@ -9,6 +8,7 @@ import (
 
 	"github.com/elastic/beats/libbeat/beat"
 	"github.com/elastic/beats/libbeat/common"
+	"github.com/elastic/beats/libbeat/logp"
 	"github.com/elastic/beats/libbeat/monitoring"
 )
 
@@ -27,14 +27,6 @@ var (
 	}
 )
 
-type fakeLogger struct {
-	logs []string
-}
-
-func (l *fakeLogger) Infof(format string, v ...interface{}) {
-	l.logs = append(l.logs, fmt.Sprintf(format, v...))
-}
-
 // Smoke test.
 func TestStartStop(t *testing.T) {
 	r, err := MakeReporter(beat.Info{}, common.NewConfig())
@@ -52,11 +44,14 @@ func TestMakeDeltaSnapshot(t *testing.T) {
 }
 
 func TestReporterLog(t *testing.T) {
-	logger := &fakeLogger{}
-	reporter := reporter{period: 30 * time.Second, logger: logger}
+	logp.DevelopmentSetup(logp.ToObserverOutput())
+	reporter := reporter{period: 30 * time.Second, logger: logp.NewLogger("monitoring")}
 
 	reporter.logSnapshot(monitoring.FlatSnapshot{})
-	assert.Equal(t, "No non-zero metrics in the last 30s", logger.logs[0])
+	logs := logp.ObserverLogs().TakeAll()
+	if assert.Len(t, logs, 1) {
+		assert.Equal(t, "No non-zero metrics in the last 30s", logs[0].Message)
+	}
 
 	reporter.logSnapshot(
 		monitoring.FlatSnapshot{
@@ -65,9 +60,27 @@ func TestReporterLog(t *testing.T) {
 			},
 		},
 	)
-	assert.Equal(t, "Non-zero metrics in the last 30s: running=true", logger.logs[1])
+	logs = logp.ObserverLogs().TakeAll()
+	if assert.Len(t, logs, 1) {
+		assert.Equal(t, "Non-zero metrics in the last 30s", logs[0].Message)
+		assertMapHas(t, logs[0].ContextMap(), "monitoring.metrics.running", true)
+	}
 
 	reporter.logTotals(curSnap)
-	assert.Equal(t, "Total non-zero metrics: count=20 new=1", logger.logs[2])
-	assert.Contains(t, logger.logs[3], "Uptime: ")
+	logs = logp.ObserverLogs().TakeAll()
+	if assert.Len(t, logs, 2) {
+		assert.Equal(t, "Total non-zero metrics", logs[0].Message)
+		assertMapHas(t, logs[0].ContextMap(), "monitoring.metrics.count", 20)
+		assertMapHas(t, logs[0].ContextMap(), "monitoring.metrics.new", 1)
+		assert.Contains(t, logs[1].Message, "Uptime: ")
+	}
+}
+
+func assertMapHas(t *testing.T, m map[string]interface{}, key string, expectedValue interface{}) {
+	t.Helper()
+	v, err := common.MapStr(m).GetValue(key)
+	if err != nil {
+		t.Fatal(err)
+	}
+	assert.EqualValues(t, expectedValue, v)
 }
