@@ -168,11 +168,11 @@ class Test(BaseTest):
         )
         proc = self.start_beat(logging_args=["-e"])
         self.wait_until(
-            lambda: self.log_contains("Non-zero metrics in the last 100ms:"),
+            lambda: self.log_contains("Non-zero metrics in the last 100ms"),
             max_timeout=2)
         proc.check_kill_and_wait()
         self.wait_until(
-            lambda: self.log_contains("Total non-zero metrics:"),
+            lambda: self.log_contains("Total non-zero metrics"),
             max_timeout=2)
 
     def test_persistent_uuid(self):
